[project]
name = "2a202600060-hosyminhha-day07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.0",
]
